// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XBlockView /> does not render prompts and rubric when step is unavailable 1`] = `
<div
  id="ora-xblock-view"
>
  <h3>
    title
  </h3>
  <ProgressBar />
  <StatusRow />
  <StatusAlert />
  <HotjarSurvey />
  <Instructions />
  <Actions />
</div>
`;

exports[`<XBlockView /> render everything 1`] = `
<div
  id="ora-xblock-view"
>
  <h3>
    title
  </h3>
  <ProgressBar />
  <StatusRow />
  <StatusAlert />
  <HotjarSurvey />
  <Instructions />
  <Actions />
  <Fragment>
    <Prompt
      key="prompt1"
      prompt="prompt1"
    />
    <Prompt
      key="prompt2"
      prompt="prompt2"
    />
    <Rubric
      isCollapsible={true}
    />
  </Fragment>
</div>
`;

exports[`<XBlockView /> render everything without rubric 1`] = `
<div
  id="ora-xblock-view"
>
  <h3>
    title
  </h3>
  <ProgressBar />
  <StatusRow />
  <StatusAlert />
  <HotjarSurvey />
  <Instructions />
  <Actions />
  <Fragment>
    <Prompt
      key="prompt1"
      prompt="prompt1"
    />
    <Prompt
      key="prompt2"
      prompt="prompt2"
    />
  </Fragment>
</div>
`;
